--- a/src/styles/temperaturebox.css
+++ b/src/styles/temperaturebox.css
@@ -1,13 +1,10 @@
 .container-box {
     background: var(--main-box);
-    padding: 2.5rem;
+    padding: 1rem;
     border-radius: 10px;
     color: var(--text);
 }
 
-.line {
-    width: 86%;
-}
 
 .temp-box {
     display: flex;
@@ -15,11 +12,11 @@
 }
 
 .temp{
-    font-size: 4rem;
+    font-size: 5rem;
 }
 
 .temp-logo {
-    font-size: 4.3rem;
+    font-size: 5.4rem;
     margin-left: 1rem;
 }
 
@@ -29,7 +26,107 @@
     color: var(--sub-text);
 }
 
+.bottom {
+    display: flex;
+    flex-direction: column;
+}
+
 .date-logo, .location-logo {
     font-size: 1.4rem;
     margin-right: 0.5rem;
+}
+
+@media only screen and (max-width: 1024px ){
+    .top h6 {
+        font-size: 14px;
+    }
+    .temp {
+        font-size: 3.6rem;
+    }
+
+    .temp-logo{
+        font-size: 4rem;
+    }
+
+    .date-logo, .location-logo {
+        font-size: 1.2rem;
+        margin-right: 0.5rem;
+    }
+
+    .date span, .location span {
+        font-size: 14px;
+    }
+}
+@media only screen and (max-width: 768px ){
+    .container-box{
+        padding: .8rem;
+    }
+    .top h6 {
+        font-size: 10px;
+    }
+    .temp {
+        font-size: 2.5rem;
+    }
+
+    .temp-logo{
+        display: none;
+    }
+
+    .date-logo, .location-logo {
+        font-size: 0.8rem;
+        margin-right: 0.5rem;
+    }
+
+    .date span, .location span {
+        font-size: 10px;
+    }
+}
+@media only screen and (max-width: 426px ){
+    .container-box{
+        padding: 1.5rem;
+    }
+    .top h6 {
+        font-size: 18px;
+    }
+    .temp {
+        font-size: 4.8rem;
+    }
+
+    .temp-logo{
+        display: block;
+        font-size: 5.1rem;
+    }
+
+    .date-logo, .location-logo {
+        font-size: 1.5rem;
+        margin-right: 0.5rem;
+    }
+
+    .date span, .location span {
+        font-size: 18px;
+    }
+}
+@media only screen and (max-width: 320px ){
+    .container-box{
+        padding: 1.5rem;
+    }
+    .top h6 {
+        font-size: 16px;
+    }
+    .temp {
+        font-size: 4rem;
+    }
+
+    .temp-logo{
+        font-size: 4.5rem;
+    }
+
+    .date-logo, .location-logo {
+        font-size: 1.5rem;
+        margin-right: 0.5rem;
+    }
+
+    .date span, .location span {
+        font-size: 16px;
+    }
 }
