--- a/src/styles/temperaturebox.css
+++ b/src/styles/temperaturebox.css
@@ -37,15 +37,21 @@
 }
 
 @media only screen and (max-width: 1024px ){
+    .container-box{
+        width: 100%;
+    }
     .top h6 {
         font-size: 14px;
     }
     .temp {
-        font-size: 3.6rem;
+        font-size: 3rem;
     }
-
+    .temp-box{
+        display: flex;
+        justify-content: space-between;
+    }
     .temp-logo{
-        font-size: 4rem;
+        font-size: 3.1rem;
     }
 
     .date-logo, .location-logo {
@@ -60,16 +66,20 @@
 @media only screen and (max-width: 768px ){
     .container-box{
         padding: .8rem;
+        width: 100%;
     }
     .top h6 {
         font-size: 10px;
     }
     .temp {
-        font-size: 2.5rem;
+        font-size: 1.5rem;
     }
-
+    .temp-box{
+        display: flex;
+        justify-content: space-between;
+    }
     .temp-logo{
-        display: none;
+        font-size: 1.6rem;
     }
 
     .date-logo, .location-logo {
@@ -84,49 +94,60 @@
 @media only screen and (max-width: 426px ){
     .container-box{
         padding: 1.5rem;
+        width: 100%;
+        height: 90%;
     }
     .top h6 {
-        font-size: 18px;
+        font-size: 14px;
+    }
+    .temp-box{
+        display: flex;
+        justify-content: space-between;
     }
     .temp {
-        font-size: 4.8rem;
+        font-size: 2.8rem;
     }
 
     .temp-logo{
-        display: block;
-        font-size: 5.1rem;
+        font-size: 3rem;
     }
 
     .date-logo, .location-logo {
-        font-size: 1.5rem;
+        font-size: 1rem;
         margin-right: 0.5rem;
     }
 
     .date span, .location span {
-        font-size: 18px;
+        font-size: 12px;
     }
 }
 @media only screen and (max-width: 320px ){
     .container-box{
         padding: 1.5rem;
+        width: 100%;
+        height: 90%;
     }
     .top h6 {
-        font-size: 16px;
+        font-size: 12px;
+    }
+    .temp-box{
+        display: flex;
+        justify-content: space-between;
     }
     .temp {
-        font-size: 4rem;
+        font-size: 2rem;
     }
 
     .temp-logo{
-        font-size: 4.5rem;
+        font-size: 2.5rem;
     }
 
     .date-logo, .location-logo {
-        font-size: 1.5rem;
+        font-size: .8rem;
         margin-right: 0.5rem;
     }
 
     .date span, .location span {
-        font-size: 16px;
+        font-size: 10px;
     }
 }
