--- a/src/styles/highlight.css
+++ b/src/styles/highlight.css
@@ -55,9 +55,10 @@ h4 {
 }
 
 .top-left-head span {
-    padding: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 20%;
-    text-align: center;
     font-weight: 500;
     border-radius: 20px;
     color: black;
@@ -121,26 +122,29 @@ h4 {
 .humidity,
 .pressure,
 .visibility,
-.feels-like {
+.feels-like,
+.wind {
     background-color: var(--sub-box);
     padding: 1rem;
     border-radius: 10px;
-    width: 23.5%;
+    width: 19%;
 }
 
 .hum-value,
 .pressure-value,
 .visi-value,
-.feels-value {
+.feels-value,
+.wind-value {
     display: flex;
     justify-content: space-between;
-    align-items: star;
+    align-items: start;
 }
 
 .humidity h5,
 .pressure h5,
 .visibility h5,
-.feels-like h5 {
+.feels-like h5,
+.wind h5 {
     color: var(--text);
     font-size: 16px;
     font-weight: 400;
@@ -149,7 +153,8 @@ h4 {
 .hum-value .logo,
 .pressure-value .logo,
 .visi-value .logo,
-.feels-like .logo {
+.feels-like .logo,
+.wind .logo {
     font-size: 3rem;
 }
 .hum-value span,
@@ -157,5 +162,10 @@ h4 {
 .visi-value span,
 .feels-like span {
     font-size: 2rem;
+    font-weight: 300;
+}
+
+.wind span {
+    font-size: 1.6rem;
     font-weight: 300;
 }
