--- a/src/styles/todayclimate.css
+++ b/src/styles/todayclimate.css
@@ -1,49 +1,41 @@
-.top-container {
-    display: flex;
-    justify-content: space-between;
+.today-container {
+    padding: 0.2rem;
+    overflow-x: scroll;
+    overflow-y: hidden;
+}
+h5 {
+    color: var(--main-text);
+    font-size: 22px;
 }
 
-.all-climate {
-    padding: 0.5rem;
-    background-color: var(--sub-box);
-    border-radius: 10px;
-    width: 11%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+.top-container,
 .bottom-container {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 1rem;
+    padding: 0.5rem;
+    display: grid;
+    grid-template-columns: repeat(24, 1fr);
 }
 
+.all-climate,
 .all-wind {
-    padding: 0.5rem;
-    background-color: var(--sub-box);
-    border-radius: 10px;
-    width: 11%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: fit-content;
+    height: fit-content;
+    background-color: var(--sub-box);
+    border-radius: 10px;
+    padding: 1.5rem;
+    text-align: center;
+    margin: 0rem 0.5rem;
 }
 
-.climate-time,
-.wind-time {
-    font-size: 1.2rem;
-    font-weight: 300;
-    color: var(--text);
+.today-temperature,
+.today-wind {
+    width: 70px;
+    height: 70px;
 }
 
 .climate-temp,
 .windspeed {
-    font-size: .9rem;
-    font-weight: 300;
-    color: var(--text);
-}
-
-.today-temperature {
-    margin: 0.5rem;
-    width: 50px;
-    height: 50px;
+    font-size: 0.9rem;
 }
