--- a/src/styles/currentweather.css
+++ b/src/styles/currentweather.css
@@ -1,153 +1,186 @@
 .container-box {
-    background: var(--main-box);
-    padding: 1rem;
-    border-radius: 10px;
-    color: var(--text);
+  background: var(--main-box);
+  padding: 1rem;
+  border-radius: 10px;
+  color: var(--text);
 }
 
+/* Top */
 
 .temperature-box {
-    display: flex;
-    color: var(--main-text);
+  display: flex;
+  color: var(--main-text);
 }
 
-.temperature{
-    font-size: 4.2rem;
+.temperature {
+  font-size: 4.2rem;
 }
 
 .temperature-logo {
-    font-size: 5.4rem;
-    margin-left: 1rem;
+  font-size: 5.4rem;
+  margin-left: 1rem;
 }
 
-.date, .location {
-    display: flex;
-    padding: 0rem 0 0.5rem 0;
-    color: var(--sub-text);
-}
+/* Bottom */
 
 .bottom {
+  display: flex;
+  flex-direction: column;
+}
+
+.date,
+.location {
+  display: flex;
+  padding: 0rem 0 0.5rem 0;
+  color: var(--sub-text);
+}
+
+.date-logo,
+.location-logo {
+  font-size: 1.4rem;
+  margin-right: 0.5rem;
+}
+
+@media only screen and (max-width: 1024px) {
+  .container-box {
+    width: 100%;
+  }
+
+  /* Top */
+
+  .top h6 {
+    font-size: 14px;
+  }
+  .temperature {
+    font-size: 3rem;
+  }
+  .temperature-box {
     display: flex;
-    flex-direction: column;
-}
+    justify-content: space-between;
+  }
+  .temperature-logo {
+    font-size: 3.1rem;
+  }
 
-.date-logo, .location-logo {
-    font-size: 1.4rem;
+  /* Bottom */
+
+  .date-logo,
+  .location-logo {
+    font-size: 1.2rem;
     margin-right: 0.5rem;
+  }
+
+  .date span,
+  .location span {
+    font-size: 14px;
+  }
 }
+@media only screen and (max-width: 768px) {
+  .container-box {
+    padding: 0.8rem;
+    width: 100%;
+  }
 
-@media only screen and (max-width: 1024px ){
-    .container-box{
-        width: 100%;
-    }
-    .top h6 {
-        font-size: 14px;
-    }
-    .temperature {
-        font-size: 3rem;
-    }
-    .temperature-box{
-        display: flex;
-        justify-content: space-between;
-    }
-    .temperature-logo{
-        font-size: 3.1rem;
-    }
+  /* Top */
 
-    .date-logo, .location-logo {
-        font-size: 1.2rem;
-        margin-right: 0.5rem;
-    }
+  .top h6 {
+    font-size: 10px;
+  }
+  .temperature {
+    font-size: 1.5rem;
+  }
+  .temperature-box {
+    display: flex;
+    justify-content: space-between;
+  }
+  .temperature-logo {
+    font-size: 1.6rem;
+  }
 
-    .date span, .location span {
-        font-size: 14px;
-    }
+  /* Bottom */
+
+  .date-logo,
+  .location-logo {
+    font-size: 0.8rem;
+    margin-right: 0.5rem;
+  }
+
+  .date span,
+  .location span {
+    font-size: 10px;
+  }
 }
-@media only screen and (max-width: 768px ){
-    .container-box{
-        padding: .8rem;
-        width: 100%;
-    }
-    .top h6 {
-        font-size: 10px;
-    }
-    .temperature {
-        font-size: 1.5rem;
-    }
-    .temperature-box{
-        display: flex;
-        justify-content: space-between;
-    }
-    .temperature-logo{
-        font-size: 1.6rem;
-    }
+@media only screen and (max-width: 426px) {
+  .container-box {
+    padding: 1.5rem;
+    width: 100%;
+    height: 90%;
+  }
 
-    .date-logo, .location-logo {
-        font-size: 0.8rem;
-        margin-right: 0.5rem;
-    }
+  /* Top */
 
-    .date span, .location span {
-        font-size: 10px;
-    }
+  .top h6 {
+    font-size: 14px;
+  }
+  .temperature-box {
+    display: flex;
+    justify-content: space-between;
+  }
+  .temperature {
+    font-size: 2.8rem;
+  }
+
+  .temperature-logo {
+    font-size: 3rem;
+  }
+
+  /* Bottom */
+
+  .date-logo,
+  .location-logo {
+    font-size: 1rem;
+    margin-right: 0.5rem;
+  }
+
+  .date span,
+  .location span {
+    font-size: 12px;
+  }
 }
-@media only screen and (max-width: 426px ){
-    .container-box{
-        padding: 1.5rem;
-        width: 100%;
-        height: 90%;
-    }
-    .top h6 {
-        font-size: 14px;
-    }
-    .temperature-box{
-        display: flex;
-        justify-content: space-between;
-    }
-    .temperature {
-        font-size: 2.8rem;
-    }
+@media only screen and (max-width: 320px) {
+  .container-box {
+    padding: 1.5rem;
+    width: 100%;
+    height: 90%;
+  }
 
-    .temperature-logo{
-        font-size: 3rem;
-    }
+  /* Top */
 
-    .date-logo, .location-logo {
-        font-size: 1rem;
-        margin-right: 0.5rem;
-    }
+  .top h6 {
+    font-size: 12px;
+  }
+  .temperature-box {
+    display: flex;
+    justify-content: space-between;
+  }
+  .temperature {
+    font-size: 2rem;
+  }
 
-    .date span, .location span {
-        font-size: 12px;
-    }
-}
-@media only screen and (max-width: 320px ){
-    .container-box{
-        padding: 1.5rem;
-        width: 100%;
-        height: 90%;
-    }
-    .top h6 {
-        font-size: 12px;
-    }
-    .temperature-box{
-        display: flex;
-        justify-content: space-between;
-    }
-    .temperature {
-        font-size: 2rem;
-    }
+  .temperature-logo {
+    font-size: 2.5rem;
+  }
 
-    .temperature-logo{
-        font-size: 2.5rem;
-    }
+  /* Bottom */
 
-    .date-logo, .location-logo {
-        font-size: .8rem;
-        margin-right: 0.5rem;
-    }
+  .date-logo,
+  .location-logo {
+    font-size: 0.8rem;
+    margin-right: 0.5rem;
+  }
 
-    .date span, .location span {
-        font-size: 10px;
-    }
+  .date span,
+  .location span {
+    font-size: 10px;
+  }
 }
