--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,13 +1,13 @@
 .navbar-right {
-    width: 30%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  width: 30%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .input-box {
-    width: 40%;
-    color: black;
-    background-color: rgba(255, 255, 255, 0.4);
-    border-radius: 20px
+  width: 40%;
+  color: black;
+  background-color: rgba(255, 255, 255, 0.4);
+  border-radius: 20px;
 }
