--- a/src/styles/todayclimate.css
+++ b/src/styles/todayclimate.css
@@ -45,3 +45,88 @@ h5 {
 .windspeed {
   font-size: 0.9rem;
 }
+
+@media only screen and (max-width: 1024px) {
+  .today_at-box {
+    margin-left: 1rem;
+    width: 45rem;
+  }
+  
+  h5 {
+    font-size: 18px;
+  }
+
+  .top-container,
+  .bottom-container {
+  padding: 0.4rem;
+  }
+  
+  .all-climate,
+  .all-wind {
+    padding: 1.2rem;
+    margin: 0rem 0.4rem;
+  }
+  
+  .climate-time,
+  .wind-time {
+    font-size: 0.8rem;
+  }
+  
+  .today-temperature,
+  .today-wind {
+    width: 65px;
+    height: 65px;
+  }
+  
+  .climate-temp,
+  .windspeed {
+    font-size: 0.8rem;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .today_at-box {
+    position: relative;
+    top: 14.5rem;
+    right: 24rem;
+  }
+  
+  h5 {
+    font-size: 18px;
+  }
+
+  .top-container,
+  .bottom-container {
+  padding: 0.4rem;
+  }
+  
+  .all-climate,
+  .all-wind {
+    padding: 1.2rem;
+    margin: 0rem 0.4rem;
+  }
+  
+  .climate-time,
+  .wind-time {
+    font-size: 0.8rem;
+  }
+  
+  .today-temperature,
+  .today-wind {
+    width: 65px;
+    height: 65px;
+  }
+  
+  .climate-temp,
+  .windspeed {
+    font-size: 0.8rem;
+  }
+}
+
+@media only screen and (max-width: 426px){
+
+}
+
+@media only screen and (max-width: 320px){
+
+}
