--- a/src/styles/currentweather.css
+++ b/src/styles/currentweather.css
@@ -51,15 +51,14 @@
   .top h6 {
     font-size: 14px;
   }
+
   .temperature {
-    font-size: 3rem;
+    font-size: 2.6rem;
   }
-  .temperature-box {
-    display: flex;
-    justify-content: space-between;
-  }
+
   .temperature-logo {
-    font-size: 3.1rem;
+    width: 55px;
+    height: 55px;
   }
 
   /* Bottom */
