--- a/src/styles/highlight.css
+++ b/src/styles/highlight.css
@@ -165,6 +165,12 @@ h4 {
 .logo {
   font-size: 3rem;
 }
+
+.image-icon {
+  width: 40px;
+  height: 40px;
+}
+
 .hum-value span,
 .pressure-value span,
 .visi-value span,
@@ -176,4 +182,133 @@ h4 {
 .wind span {
   font-size: 1.6rem;
   font-weight: 300;
+}
+
+@media only screen and (max-width: 1024px) {
+  .highlights {
+    width: 45.5rem;
+    margin-left: 1rem;
+  }
+
+  /* common */
+
+  h4 {
+    font-size: 18px;
+  }
+
+  /* Top Box */
+
+.top-highlights {
+  display: flex;
+  justify-content: space-between;
+}
+
+/* Top Box Head */
+
+.top-left-head h6 {
+  font-size: 14px;
+}
+
+.top-left-head span {
+  width: 25%;
+  height: 1.3rem;
+  font-weight: 500;
+  font-size: 12px;
+}
+
+/* Air Pollution */
+
+.wind-icon {
+  font-size: 3rem;
+}
+
+.air-value span {
+  font-size: 10px;
+}
+.air-value h3 {
+  font-size: 18px;
+}
+
+/* SunRise & Sunset Time */
+.icon {
+  font-size: 3rem;
+}
+
+.sunrise-time,
+.sunset-time {
+  margin-left: 1rem;
+}
+
+.sunrise-time span,
+.sunset-time span {
+  font-size: 12px;
+}
+.sunrise-time h3,
+.sunset-time h3 {
+  font-size: 1.1rem;
+}
+
+/* Bottom Box */
+
+.bottom-higlights {
+  margin-top: 0.5rem;
+}
+
+.humidity,
+.pressure,
+.visibility,
+.feels-like,
+.wind {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-radius: 10px;
+  width: 19%;
+}
+
+.humidity h5,
+.pressure h5,
+.visibility h5,
+.feels-like h5,
+.wind h5 {
+  font-size: 14px;
+}
+
+.logo {
+  font-size: 2rem;
+}
+
+.image-icon {
+  width: 25px;
+  height: 25px;
+}
+
+.hum-value span,
+.pressure-value span,
+.visi-value span,
+.feels-like span {
+  font-size: 1.3rem;
+}
+
+.wind span {
+  font-size: 1rem;
+}
+
+}
+
+@media only screen and (max-width: 768px) {
+  .highlights {
+    position: relative;
+    top: 15rem;
+    right: 23.5rem;
+  }
+}
+
+@media only screen and (max-width: 426px){
+
+}
+
+@media only screen and (max-width: 320px){
+
 }
