--- a/src/styles/highlight.css
+++ b/src/styles/highlight.css
@@ -186,6 +186,8 @@ h4 {
 
 @media only screen and (max-width: 1024px) {
   .highlights {
+    position: relative;
+    left: 3rem;
     width: 45.5rem;
     margin-left: 1rem;
   }
@@ -299,16 +301,234 @@ h4 {
 
 @media only screen and (max-width: 768px) {
   .highlights {
-    position: relative;
-    top: 15rem;
-    right: 23.5rem;
+    position: absolute;
+    top: 19rem;
+    left: 0rem;
   }
 }
 
 @media only screen and (max-width: 426px){
+  .highlights {
+    width: 24.8rem;
+    position: absolute;
+    top: 54rem;
+    right: 19.8rem;
+  }
 
+  /* Top Box */
+
+  .top-highlights {
+    display: flex;
+    flex-direction: column;
+  }
+
+  /* Top Box Head */
+
+  .air-details {
+    width: 100%;
+    margin-bottom: 0.5rem;
+  }
+
+  .top-left-head h6 {
+    font-size: 14px;
+  }
+
+  .top-left-head span {
+    width: 25%;
+    font-size: 13px;
+  }
+  /* Air Pollution */
+
+  .wind-icon {
+    font-size: 3.5rem;
+  }
+
+  .air-value span {
+    font-size: 11px;
+  }
+  .air-value h3 {
+    font-size: 25px;
+  }
+
+  /* SunRise & Sunset Time */
+
+  .sun-rise_set {
+    width: 100%;
+  }
+
+  .rise-set-time {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .sunset {
+    margin-left: 1rem;
+  }
+
+  .top-right-head h6 {
+    font-size: 14px;
+  }
+
+  .icon {
+    font-size: 3.3rem;
+  }
+
+  .sunrise-time,
+  .sunset-time {
+    margin-left: 0.2rem;
+  }
+  .sunrise-time h3,
+  .sunset-time h3 {
+    font-size: 1.3rem;
+    font-weight: 300;
+  }
+
+  /* Bottom Box */
+
+  .bottom-higlights {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 0.5rem;
+  }
+
+  .humidity,
+  .pressure,
+  .visibility,
+  .feels-like,
+  .wind {
+    padding: 0.5rem;
+    width: 100%;
+  }
+
+  .humidity h5,
+  .pressure h5,
+  .visibility h5,
+  .feels-like h5,
+  .wind h5 {
+    font-size: 14px;
+  }
+
+  .logo {
+    font-size: 2rem;
+  }
+
+  .image-icon {
+    width: 38px;
+    height: 38px;
+  }
+
+  .hum-value span,
+  .pressure-value span,
+  .visi-value span,
+  .feels-like span {
+    font-size: 1.5rem;
+    font-weight: 300;
+  }
+
+  .wind span {
+    font-size: 1.4rem;
+    font-weight: 300;
+  }
 }
 
-@media only screen and (max-width: 320px){
+@media only screen and (max-width: 376px){
+  .highlights {
+    width: 21rem;
+    position: absolute;
+    top: 54rem;
+    right: 19.8rem;
+  }
 
+  .top-left-head h6 {
+    font-size: 12px;
+  }
+
+  .top-left-head span {
+    width: 25%;
+    font-size: 11px;
+  }
+  /* Air Pollution */
+
+  .wind-icon {
+    font-size: 3rem;
+  }
+
+  .air-value span {
+    font-size: 9px;
+  }
+  .air-value h3 {
+    font-size: 20px;
+  }
+
+  /* SunRise & Sunset Time */
+
+  .sunset {
+    margin-left: 0.2rem;
+  }
+
+  .top-right-head h6 {
+    font-size: 12px;
+  }
+
+  .icon {
+    font-size: 2.8rem;
+  }
+
+  .sunrise-time,
+  .sunset-time {
+    margin-left: 0.1rem;
+  }
+  .sunrise-time h3,
+  .sunset-time h3 {
+    font-size: 1.1rem;
+    font-weight: 300;
+  }
+
+  /* Bottom Box */
+
+  .bottom-higlights {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 0.5rem;
+  }
+
+  .humidity,
+  .pressure,
+  .visibility,
+  .feels-like,
+  .wind {
+    padding: 0.3rem;
+    width: 100%;
+  }
+
+  .humidity h5,
+  .pressure h5,
+  .visibility h5,
+  .feels-like h5,
+  .wind h5 {
+    font-size: 12px;
+  }
+
+  .logo {
+    font-size: 1.5rem;
+  }
+
+  .image-icon {
+    width: 32px;
+    height: 32px;
+  }
+
+  .hum-value span,
+  .pressure-value span,
+  .visi-value span,
+  .feels-like span {
+    font-size: 1.3rem;
+    font-weight: 300;
+  }
+
+  .wind span {
+    font-size: 1.2rem;
+    font-weight: 300;
+  }
 }
