--- a/src/styles/currentweather.css
+++ b/src/styles/currentweather.css
@@ -87,27 +87,28 @@
     font-size: 10px;
   }
   .temperature {
-    font-size: 1.5rem;
+    font-size: 3.3rem;
   }
   .temperature-box {
     display: flex;
     justify-content: space-between;
   }
   .temperature-logo {
-    font-size: 1.6rem;
+    width: 70px;
+    height: 70px;
   }
 
   /* Bottom */
 
   .date-logo,
   .location-logo {
-    font-size: 0.8rem;
-    margin-right: 0.5rem;
+    font-size: 1rem;
+    margin-right: 0.2rem;
   }
 
   .date span,
   .location span {
-    font-size: 10px;
+    font-size: 12px;
   }
 }
 @media only screen and (max-width: 426px) {
@@ -122,9 +123,9 @@
   .top h6 {
     font-size: 16px;
   }
-  
+
   .temperature {
-    font-size: 3.9rem;
+    font-size: 3.6rem;
   }
 
   .temperature-logo {
@@ -137,7 +138,6 @@
   .date-logo,
   .location-logo {
     font-size: 1.3rem;
-    margin-right: 0.5rem;
   }
 
   .date span,
@@ -145,13 +145,44 @@
     font-size: 15px;
   }
 }
-@media only screen and (max-width: 320px) {
+
+@media only screen and (max-width: 376px) {
   .container-box {
     padding: 1.5rem;
+    margin-top: 0.5rem;
     width: 100%;
     height: 90%;
   }
 
+  /* Top */
+
+  .top h6 {
+    font-size: 12px;
+  }
+
+  .temperature-logo {
+    width: 70px;
+    height: 70px;
+  }
+
+  .temperature {
+    font-size: 3.2rem;
+  }
+
+  /* Bottom */
+
+  .date-logo,
+  .location-logo {
+    font-size: 1.2rem;
+  }
+
+  .date span,
+  .location span {
+    font-size: 14px;
+  }
+}
+
+@media only screen and (max-width: 320px) {
   /* Top */
 
   .top h6 {
@@ -162,23 +193,23 @@
     justify-content: space-between;
   }
   .temperature {
-    font-size: 2rem;
+    font-size: 3rem;
   }
 
   .temperature-logo {
-    font-size: 2.5rem;
+    width: 60px;
+    height: 60px;
   }
 
   /* Bottom */
 
   .date-logo,
   .location-logo {
-    font-size: 0.8rem;
-    margin-right: 0.5rem;
+    font-size: 1rem;
   }
 
   .date span,
   .location span {
-    font-size: 10px;
+    font-size: 12px;
   }
 }
