--- a/src/styles/forecast.css
+++ b/src/styles/forecast.css
@@ -40,32 +40,31 @@ h6 {
 }
 
 @media only screen and (max-width: 1024px) {
-  
   h6 {
     margin-bottom: 1rem;
   }
-  
+
   .forecast-container {
     width: 125%;
     padding: 0.7rem;
   }
-  
+
   .forecast-days {
     display: flex;
     justify-content: space-between;
     margin-top: 0.8rem;
   }
-  
+
   .image-temp img {
     width: 1.5rem;
     height: 1.5rem;
   }
-  
+
   .image-temp h5 {
     font-size: 0.8rem;
     margin-left: 0.5rem;
   }
-  
+
   .forecast-days span {
     margin-left: 0.2rem;
     font-size: 12px;
@@ -73,43 +72,38 @@ h6 {
 }
 
 @media only screen and (max-width: 768px) {
-  .forecast-box{
+  .forecast-box {
     width: 18rem;
     position: absolute;
     top: 3.5rem;
     left: 24rem;
     height: 13rem;
   }
-  
-  h6 {
-    margin-bottom: 1rem;
-  }
-  
+
   .forecast-container {
-    padding: 0.7rem;
-    height: 11rem;
+    height: 12.2rem;
     overflow-y: scroll;
   }
-  
+
   .forecast-days {
     display: flex;
     justify-content: space-around;
     margin-top: 0.8rem;
   }
-  
+
   .image-temp img {
     width: 1.8rem;
     height: 1.8rem;
     margin-bottom: 0.5rem;
   }
-  
+
   .image-temp h5 {
     font-size: 1.2rem;
     margin-left: 0.5rem;
     font-weight: 300;
     color: var(--main-text);
   }
-  
+
   .forecast-days span {
     margin-left: 0.5rem;
     font-size: 15px;
@@ -117,86 +111,90 @@ h6 {
   }
 }
 
-@media only screen and (max-width: 426px){
-  .forecast-box{
+@media only screen and (max-width: 426px) {
+  .forecast-box {
     width: 19.5rem;
     position: absolute;
     top: 22rem;
     left: 1rem;
     height: fit-content;
   }
-  
+
   h6 {
     margin-bottom: 1rem;
   }
-  
+
   .forecast-container {
     padding: 0.2rem;
     height: fit-content;
   }
-  
+
   .forecast-days {
     display: flex;
     justify-content: space-around;
     align-items: center;
     margin-top: 0.8rem;
   }
-  
+
   .image-temp img {
     width: 3rem;
     height: 3rem;
     margin-bottom: 0.1rem;
   }
-  
+
   .image-temp h5 {
     font-size: 1.3rem;
     margin-left: 0.5rem;
   }
-  
+
   .forecast-days span {
     margin-left: 0.5rem;
     font-size: 16px;
   }
 }
 
-@media only screen and (max-width: 376px){
-  .forecast-box{
-    width: 17rem;
+@media only screen and (max-width: 376px) {
+  .forecast-box {
+    width: 16.5rem;
     position: absolute;
     top: 22rem;
     left: 1rem;
     height: fit-content;
   }
-  
-  h6 {
-    margin-bottom: 1rem;
+
+  .image-temp img {
+    width: 2.8rem;
+    height: 2.8rem;
   }
-  
-  .forecast-container {
-    padding: 0.2rem;
+
+  .image-temp h5 {
+    font-size: 1.1rem;
+  }
+
+  .forecast-days span {
+    font-size: 15px;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  .forecast-box {
+    width: 14.3rem;
+    position: absolute;
+    top: 20rem;
+    left: 1rem;
     height: fit-content;
   }
-  
-  .forecast-days {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin-top: 0.8rem;
-  }
-  
+
   .image-temp img {
-    width: 3rem;
-    height: 3rem;
-    margin-bottom: 0.1rem;
+    width: 2.5rem;
+    height: 2.5rem;
   }
-  
+
   .image-temp h5 {
-    font-size: 1.3rem;
-    margin-left: 0.5rem;
+    font-size: 1rem;
   }
-  
+
   .forecast-days span {
-    margin-left: 0.5rem;
-    font-size: 16px;
+    font-size: 14px;
   }
 }
