--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,16 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  background-color: rgb(190, 196, 204);
+  background-color: rgb(233, 233, 233);
   color: rgb(45, 45, 45);
 }
 
 :root {
   --text: rgba(57, 57, 57, 0.915);
+  --text2: rgb(27, 27, 27);
   --main-text: rgba(8, 8, 8, 0.9);
   --sub-text: rgba(0, 0, 0, 0.9);
-  --sub-box: rgba(157, 157, 157, 0.915);
+  --sub-box: rgba(229, 229, 229, 0.8);
   --main-box: rgba(233, 233, 233, 0.915);
   --scrollbar-bg: rgba(57, 57, 57, 0.9);
 }
