--- a/src/styles/currentweather.css
+++ b/src/styles/currentweather.css
@@ -1,5 +1,9 @@
 .container-box {
-  background: linear-gradient(250deg, rgba(81, 165, 230, 0.8), rgba(53, 182, 163, 0.826));
+  background: linear-gradient(
+    250deg,
+    rgba(81, 165, 230, 0.8),
+    rgba(53, 182, 163, 0.826)
+  );
   background-size: cover;
   background-repeat: no-repeat;
   padding: 1rem;
@@ -49,6 +53,10 @@
 .location-logo {
   font-size: 1.4rem;
   margin-right: 0.5rem;
+}
+
+.liveHour {
+  text-shadow: 5px 4px 2px rgba(0, 0, 0, 0.3);
 }
 
 @media only screen and (max-width: 1024px) {
